vbnc/vbnc/vbnc/tests/Errors/30311-5.vb
Class T
    Const M_Char_Char As Char = 12D
End Class